tests/algorithms/transpiler/FS/backtracking/hamiltonian_cycle.error
exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/algorithms/transpiler/FS/backtracking/hamiltonian_cycle.fs(73,39): error FS0001: This expression was expected to have type
    int array    
but here has type
    int    
